<!--
  ~ Copyright (C) 2016  Martin Hatina
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>
    <string name="app_name">Hung Gar Kuen</string>
    <string name="title_activity_create_new">New entity</string>

    <!-- drawer related -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_statistics">Statistics</string>

    <!-- main bar related -->
    <string name="search_title">Search</string>
    <string name="action_about">About</string>
    <string name="action_import_export">Import/Export</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="welcome_message" translatable="false">@string/app_name</string>
    <string name="sign_out">Sign out</string>
    <string name="loading">Loading…</string>

    <!-- contact related -->
    <string name="address_run_description">Show %s</string>
    <string name="mail_run_description">Write mail to %s</string>
    <string name="phone_run_description">Call %s</string>
    <string name="address_default_note">Home address</string>
    <string name="mail_default_note">Personal mail</string>
    <string name="phone_default_note">Mobile phone</string>
    <string name="address">Address</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="delete_contact_title">Delete contact</string>
    <string name="sure_to_delete_contact">Are you sure you want to delete contact?</string>
    <string name="new_contact_title">New contact</string>
    <string name="create_new_contacts">Contacts</string>

    <!-- member related -->
    <string name="date_of_birth_label">Date of birth:</string>
    <string name="new_member_day_hint">Day</string>
    <string name="new_member_month_hint">Month</string>
    <string name="new_member_year_hint">Year</string>
    <string name="new_member_title">New member</string>
    <string name="edit_member_title">Edit member</string>
    <string name="date_required_error">Date is required</string>
    <string name="wrong_date_format_error">Wrong format of date</string>
    <string name="date_in_future_error">Date cannot be in future</string>
    <string name="required_error">This field is required</string>
    <string name="delete_member_title">Delete member</string>
    <string name="sure_to_delete_member">Are you sure you want to delete member?</string>
    <string name="member_details_title">Member details</string>
    <string name="pay">Pay</string>

    <!-- product related -->
    <string name="week">Week</string>
    <string name="in_stock">%s in stock</string>
    <string name="new_product_price_hint">Price</string>
    <string name="new_product_title">New product</string>
    <string name="edit_product_title">Edit product</string>
    <string name="delete_product_title">Delete product</string>
    <string name="sure_to_delete_product">Are you sure you want to delete product?</string>
    <string name="product_details_title">Product details</string>

    <!-- payment related -->
    <string name="delete_payment_title">Delete payment</string>
    <string name="sure_to_delete_payment">Are you sure you want to delete payment?</string>
    <string name="payment_fully_paid_for">Fully paid for</string>
    <string name="payment_still_owns">Still owns</string>
    <string name="payment_owns">Owns</string>
    <string name="payment_change">Change</string>
    <string name="payment_details_title">Payment details</string>

    <!-- tab titles -->
    <string name="members_title">Members</string>
    <string name="payments_title">Payments</string>
    <string name="products_title">Products</string>

    <!-- buttons -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="hide">Hide</string>
    <string name="save">Save</string>
    <string name="currency">%s CZK</string>
    <string name="filter">Filter</string>
    <string name="deleted">Deleted</string>
    <string name="import_members">Import members</string>
    <string name="csv_txt_error">File should be a csv or txt</string>
    <string name="cannot_open_file">Cannot open file: %s</string>
    <string name="no_delimeter_found">No tabulator or \';\' found in file</string>
    <string name="install_file_manager">Please install a File Manager</string>
    <string name="new_payment_title">New payment</string>
    <string name="edit_payment_title">Edit payment</string>
    <string name="incorrect_format">Incorrect format</string>
    <string name="choose_date">Choose a date</string>
    <string name="frequency">Frequency</string>
    <string name="stock">In stock</string>
    <string name="failed_auth">Authentication failed</string>
    <string name="google_play_service_error">Google Play Services error</string>
    <string name="failed_login">Failed to log in</string>
    <string name="activity_error">Cannot open activity for creation of new entity</string>
    <string name="refresh_list_error">Cannot refresh list</string>
    <string name="discount_error">Incorrect discount</string>
    <string name="no_member">No such member</string>
    <string name="incorrect_price">Incorrect price</string>
    <string name="no_product">No such product</string>
    <string name="date_not_specified">Not specified</string>
    <string name="report_by_connecting">Report by connecting to internet</string>
    <string name="contact">Contact</string>
    <string name="note">Note</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="joined_on">Joined on:</string>
    <string name="paid_until">Paid until:</string>
    <string name="unknown">Unknown</string>
    <string name="new_button">New</string>
    <string name="paid">paid</string>
    <string name="for_product">for</string>
    <string name="valid_until">Valid until:</string>
    <string name="discount">Discount:</string>
    <string name="indefinite">Indefinite</string>
    <string name="member_name">Member name</string>
    <string name="product_name">Product name</string>
    <string name="paid_capital">Paid</string>
    <string name="detail">Detail</string>
    <string name="valid_for">Valid for</string>
    <string name="adult">Adult</string>
    <string name="youngster">Youngster</string>
    <string name="junior">Junior</string>
    <string name="child">Child</string>
    <string name="beginner">Beginner</string>
    <string name="contact_type">Contact type</string>
    <string name="member_type">Member type</string>
    <string name="is_beginner">Is beginner</string>
    <string name="should_pay">Should pay</string>
    <string name="payment_status">Payment status</string>
    <string name="choose_members">Choose members</string>
    <string name="choose_product">Choose product</string>
    <string name="periodic_type">Periodic type</string>
    <string name="bug_reporting">Bug reporting</string>
    <string name="report_to_github">Report to github</string>
    <string name="report_to_mail">Report to mail</string>
    <string name="version">Version: %s</string>
    <string name="author">Author: %s</string>
    <string name="not_implemented">Not yet implemented</string>
    <string name="update">Updates</string>
    <string name="check_for_update">Check for update</string>
    <string name="new_version">New version available</string>
    <string name="update_app">Please, update app to new version</string>
    <string name="update_now">Update</string>
    <string name="no_update">No update available</string>
    <string name="update_error">Cannot download update</string>
    <string name="not_authorized">You are not authorized to access the data</string>
</resources>
