<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016  Martin Hatina
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/filter"
          android:orderInCategory="99"
          android:icon="@drawable/filter"
          android:title="@string/filter"
          app:showAsAction="ifRoom" />
    <item android:title="@string/action_import_export">
        <menu>
            <item
                android:id="@+id/action_import"
                android:orderInCategory="100"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_export"
                android:orderInCategory="101"
                android:title="@string/action_export" />
        </menu>
    </item>
</menu>
