<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016  Martin Hatina
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/type_adult"
        android:icon="@drawable/adult_icon"
        android:title="@string/adult"/>
    <item
        android:id="@+id/type_youngster"
        android:icon="@drawable/youngster_icon"
        android:title="@string/youngster"/>
    <item
        android:id="@+id/type_junior"
        android:icon="@drawable/junior_icon"
        android:title="@string/junior"/>
    <item
        android:id="@+id/type_child"
        android:icon="@drawable/child_icon"
        android:title="@string/child"/>
    <group
        android:id="@+id/beginner_group"
        android:checkableBehavior="all">
        <item
            android:id="@+id/type_beginner"
            android:checked="true"
            android:title="@string/beginner"/>
    </group>
</menu>